# -----------------------------------------------------------------------------
# Project: LogfileLVP
# File: setup.cfg
# -----------------------------------------------------------------------------
# Purpose: 
# This file is used to configure the packaging, and the distribution process 
# for the LogfileLVP project. It is used by setup tools like setuptools 
# and distutils.
# -----------------------------------------------------------------------------
# Author: Christofanis Skordas
#
# Copyright (C) 2024 GSECARS, The University of Chicago, USA
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.#
# -----------------------------------------------------------------------------

[metadata]
name = LogfileLVP
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
description = A GUI software for creating experiment run folders and logs
license_file = LICENSE
long_description = file: README.mb
long_description_content_type = text/markdown
url = https://github.com/GSECARS/LogfileLVP
project_urls =
    Bug Tracker = https://github.com/GSECARS/LogfileLVP/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
packages =
    logfilelvp
install_requires =
    PyQt6>=6.6.1
    QtPy>=2.4.1
    GSEWidgets>=0.0.1
python_requires = >=3.11
package_dir =
    =.
zip_safe = no

[versioneer]
VCS = git
style = pep440
versionfile_source = logfilelvp/_version.py
versionfile_build = logfilelvp/_version.py
tag_prefix = ''
parentdir_prefix = ''